SDKs/neutrinoapi.net/3.5.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/neutrinoapi.net/3.5.0/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New(
        sdk.WithSecurity(shared.Security{
            APIKey: shared.SchemeAPIKey{
                APIKey: "YOUR_API_KEY_HERE",
            },
            UserID: shared.SchemeUserID{
                APIKey: "YOUR_API_KEY_HERE",
            },
        }),
    )

    req := operations.BadWordFilterRequest{
        Request: &operations.BadWordFilterRequestBody{
            Catalog: "unde",
            CensorCharacter: "deserunt",
            Content: "porro",
            OutputCase: "camel",
        },
    }

    ctx := context.Background()
    res, err := s.DataTools.BadWordFilter(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.BadWordFilterResponse != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations


### DataTools

* `BadWordFilter` - Bad Word Filter
* `EmailValidate` - Email Validate
* `PhoneValidate` - Phone Validate
* `UserAgentInfo` - User Agent Info

### ECommerce

* `BINListDownload` - BIN List Download
* `BINLookup` - BIN Lookup
* `Convert` - Convert

### Geolocation

* `GeocodeAddress` - Geocode Address
* `GeocodeReverse` - Geocode Reverse
* `IPInfo` - IP Info

### Imaging

* `Html5Render` - HTML5 Render
* `ImageResize` - Image Resize
* `ImageWatermark` - Image Watermark
* `QRCode` - QR Code

### SecurityAndNetworking

* `EmailVerify` - Email Verify
* `HostReputation` - Host Reputation
* `IPBlocklist` - IP Blocklist
* `IPBlocklistDownload` - IP Blocklist Download
* `IPProbe` - IP Probe

### Telephony

* `HLRLookup` - HLR Lookup
* `PhonePlayback` - Phone Playback
* `PhoneVerify` - Phone Verify
* `SMSMessage` - SMS Message
* `SMSVerify` - SMS Verify
* `VerifySecurityCode` - Verify Security Code

### Www

* `BrowserBot` - Browser Bot
* `HTMLClean` - HTML Clean
* `URLInfo` - URL Info
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
